--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -12,11 +12,11 @@
         <header class="dashboard-header">
             <div class="header-content">
                 <div class="logo-section">
-                    <h1>🛡️ Agentic SOC</h1>
+                    <h1>Agentic SOC</h1>
                     <p class="subtitle">AI-Powered Level 1 SOC Automation</p>
                 </div>
                 <div class="header-actions">
-                    <label class="btn btn-primary" for="uploadInput">📁 Upload Alerts</label>
+                    <label class="btn btn-primary" for="uploadInput">Upload Alerts</label>
                     <input id="uploadInput" type="file" accept="application/json" multiple style="display:none" />
                     <button id="clearBtn" class="btn btn-danger">Clear All</button>
                 </div>
@@ -27,42 +27,42 @@
         <section class="metrics-section">
             <div class="metrics-grid">
                 <div class="metric-card">
-                    <div class="metric-icon">📊</div>
+                    <div class="metric-icon"></div>
                     <div class="metric-content">
                         <div class="metric-label">Total Processed</div>
                         <div class="metric-value" id="totalProcessed">0</div>
                     </div>
                 </div>
                 <div class="metric-card">
-                    <div class="metric-icon">⚡</div>
+                    <div class="metric-icon"></div>
                     <div class="metric-content">
                         <div class="metric-label">In Progress</div>
                         <div class="metric-value" id="inProgress">0</div>
                     </div>
                 </div>
                 <div class="metric-card success">
-                    <div class="metric-icon">✓</div>
+                    <div class="metric-icon"></div>
                     <div class="metric-content">
                         <div class="metric-label">True Positives</div>
                         <div class="metric-value" id="truePositives">0</div>
                     </div>
                 </div>
                 <div class="metric-card warning">
-                    <div class="metric-icon">⚠</div>
+                    <div class="metric-icon"></div>
                     <div class="metric-content">
                         <div class="metric-label">False Positives</div>
                         <div class="metric-value" id="falsePositives">0</div>
                     </div>
                 </div>
                 <div class="metric-card info">
-                    <div class="metric-icon">ℹ</div>
+                    <div class="metric-icon"></div>
                     <div class="metric-content">
                         <div class="metric-label">Benign</div>
                         <div class="metric-value" id="benign">0</div>
                     </div>
                 </div>
                 <div class="metric-card">
-                    <div class="metric-icon">⏱️</div>
+                    <div class="metric-icon"></div>
                     <div class="metric-content">
                         <div class="metric-label">Avg MTTR</div>
                         <div class="metric-value" id="avgMTTR">0s</div>
@@ -76,7 +76,7 @@
             <!-- Left Panel: File List -->
             <aside class="left-panel" id="leftPanel">
                 <div class="panel-header">
-                    <h3>📂 Uploaded Files</h3>
+                    <h3>Uploaded Files</h3>
                 </div>
                 <div class="file-list" id="fileList">
                     <div class="empty-message">
@@ -88,8 +88,8 @@
             <!-- Center Panel: Alerts -->
             <section class="center-panel">
                 <div class="panel-header">
-                    <h3>⚠️ Alerts</h3>
-                    <button id="startAnalysisBtn" class="btn btn-primary" disabled>🚀 Start Analysis</button>
+                    <h3>Alerts</h3>
+                    <button id="startAnalysisBtn" class="btn btn-primary" disabled>Start Analysis</button>
                 </div>
                 <div class="alerts-container">
                     <div class="alert-controls">
@@ -111,7 +111,7 @@
             <!-- Right Panel: Agent Analysis Terminal -->
             <aside class="right-panel" id="rightPanel">
                 <div class="panel-header">
-                    <h3>🤖 Agent Analysis Terminal</h3>
+                    <h3>Agent Analysis Terminal</h3>
                 </div>
                 <div class="terminal-container" id="terminalContainer">
                     <div class="terminal-output" id="terminalOutput">
