--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -15,6 +15,13 @@
                     <h1>Agentic SOC</h1>
                 </div>
                 <div class="header-actions">
+                    <div class="toggle-container">
+                        <label class="toggle-label">Enable AI</label>
+                        <label class="switch">
+                            <input type="checkbox" id="enableAIToggle" checked>
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
                     <label class="btn btn-primary" for="uploadInput">Upload Alerts</label>
                     <input id="uploadInput" type="file" accept="application/json" multiple style="display:none" />
                     <button id="clearBtn" class="btn btn-danger">Clear All</button>
